--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -8,3 +8,5 @@ min.amount=The amount value of the loan is less than minimum.
 size.max.1000=The maximum length of the field is 1000.
 size.max.10000=The maximum length of the field is 10000.
 musnt.be.empty=The value must not be empty.
+
+application.exception.person_in_blacklist=The person is in the black list.
