The LoanApplicationLimitRequestService was added.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -10,3 +10,4 @@ size.max.10000=The maximum length of the field is 10000.
 musnt.be.empty=The value must not be empty.
 
 application.exception.person_in_blacklist=The person is in the black list.
+application.exception.limit_request_reached=The number of loan applications coming from the country is reached.
